--- a/index.html
+++ b/index.html
@@ -1,49 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Interactive rating component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+	<meta charset="UTF-8">
+	<meta
+			content="width=device-width, initial-scale=1.0"
+			name="viewport"
+	>
+	<!-- displays site properly based on user's device -->
+	<link
+			href="./images/favicon-32x32.png"
+			rel="icon"
+			sizes="32x32"
+			type="image/png"
+	>
+	<link
+			href="styles.css"
+			rel="stylesheet"
+	>
+	<title>Frontend Mentor | Interactive rating component</title>
 </head>
 <body>
-
-  <!-- Rating state start -->
-
-  How did we do?
-
-  Please let us know how we did with your support request. All feedback is appreciated 
-  to help us improve our offering!
-
-  1 2 3 4 5
-
-  Submit
-
-  <!-- Rating state end -->
-
-  <!-- Thank you state start -->
-
-  You selected <!-- Add rating here --> out of 5
-
-  Thank you!
-
-  We appreciate you taking the time to give a rating. If you ever need more support, 
-  don’t hesitate to get in touch!
-
-  <!-- Thank you state end -->
-
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+<!-- Rating state start -->
+<div class="container">
+	<div class="card">
+		<div class="card__image"><img
+				alt="Icon star svg"
+				src="./images/icon-star.svg"
+		/></div>
+		<h1 class="card__title">How did we do?</h1>
+		<p class="card__paragraph"> Please let us know how we did with your support request. All feedback is appreciated
+		                            to help us improve our offering!</p>
+		<ul>
+			<li class="list_item">1</li>
+			<li class="list_item">2</li>
+			<li class="list_item">3</li>
+			<li class="list_item">4</li>
+			<li class="list_item">5</li>
+		</ul>
+		<button
+				class="btn__submit"
+				type="submit"
+		>Submit
+		</button>
+	</div>
+	<div class="success">
+		<div class="success__img"><img
+				alt="Thank you svg"
+				src="./images/illustration-thank-you.svg"
+		></div>
+		<p class="success__value">You selected <span class="span__value"></span> out of 5</p>
+		<h1>Thank you!</h1>
+		<p class="success__bottom">We appreciate you taking the time to give a rating. If you ever need more support,
+		                           don’t hesitate to get in touch!</p>
+	</div>
+</div>
+<!-- Rating state end -->
+<!-- Thank you state start -->
+<!-- Thank you state end -->
+<footer class="attribution">
+	<p>
+		<a
+				href="https://www.frontendmentor.io/challenges/interactive-rating-component-koxpeBUmI"
+				target="_blank"
+		>Frontend Mentor</a
+		>
+	</p>
+	<p>Coded by <a href="https://github.com/kareemadesola">Kareem Adesola</a></p>
+</footer>
 </body>
 </html>
