incorporate behaviour when a button is clicked

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
 		<p class="card__paragraph"> Please let us know how we did with your support request. All feedback is appreciated
 		                            to help us improve our offering!</p>
 		<ul>
-			<li class="list_item">1</li>
-			<li class="list_item">2</li>
-			<li class="list_item">3</li>
-			<li class="list_item">4</li>
-			<li class="list_item">5</li>
+			<li class="list__item">1</li>
+			<li class="list__item">2</li>
+			<li class="list__item">3</li>
+			<li class="list__item">4</li>
+			<li class="list__item">5</li>
 		</ul>
 		<button
 				class="btn__submit"
@@ -67,5 +67,6 @@
 	</p>
 	<p>Coded by <a href="https://github.com/kareemadesola">Kareem Adesola</a></p>
 </footer>
+<script src="script.js"></script>
 </body>
 </html>
